<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/fragment_menu_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_app">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:clipToPadding="false"
		android:paddingHorizontal="@dimen/padding_large"
		android:paddingTop="@dimen/padding_large"
		android:paddingBottom="@dimen/padding_large"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/mc_version_spinner">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/Amethyst.SectionHeader"
				android:layout_marginStart="@dimen/_4sdp"
				android:layout_marginBottom="@dimen/_8sdp"
				android:text="@string/main_menu_section_community" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:baselineAligned="false">

				<com.kdt.mcgui.LauncherMenuButton
					android:id="@+id/news_button"
					style="@style/LauncherMenuButton.Universal"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:drawableStart="@drawable/ic_menu_article"
					android:text="@string/mcl_tab_wiki" />

				<Space
					android:layout_width="@dimen/_10sdp"
					android:layout_height="1dp" />

				<com.kdt.mcgui.LauncherMenuButton
					android:id="@+id/discord_button"
					style="@style/LauncherMenuButton.Universal"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:drawableStart="@drawable/ic_menu_discord"
					android:text="@string/mcl_button_discord" />
			</LinearLayout>

			<TextView
				style="@style/Amethyst.SectionHeader"
				android:layout_marginStart="@dimen/_4sdp"
				android:layout_marginTop="@dimen/_22sdp"
				android:layout_marginBottom="@dimen/_8sdp"
				android:text="@string/main_menu_section_tools" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/custom_control_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_menu_gamepad"
				android:text="@string/mcl_option_customcontrol" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/install_jar_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:layout_marginTop="@dimen/_10sdp"
				android:drawableStart="@drawable/ic_menu_download"
				android:text="@string/main_install_jar_file" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/share_logs_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:layout_marginTop="@dimen/_10sdp"
				android:drawableStart="@drawable/ic_menu_logs"
				android:text="@string/main_share_logs" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/open_files_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:layout_marginTop="@dimen/_10sdp"
				android:drawableStart="@drawable/ic_menu_folder"
				android:text="@string/mcl_button_open_directory" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/local_server_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:layout_marginTop="@dimen/_10sdp"
				android:drawableStart="@drawable/ic_menu_local_server"
				android:text="@string/main_local_server" />
		</LinearLayout>
	</ScrollView>

	<!-- This view is for cosmetic purpose only -->
	<View
		android:id="@+id/_background_display_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/background_bottom_bar"
		android:translationZ="-1dp"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="@id/mc_version_spinner" />

	<com.kdt.mcgui.mcVersionSpinner
		android:id="@+id/mc_version_spinner"
		android:layout_width="0dp"
		android:layout_height="@dimen/_52sdp"
		android:background="@android:color/transparent"
		android:drawableEnd="@drawable/spinner_arrow"

		app:drawableEndSize="@dimen/padding_heavy"
		app:drawableStartIntegerScaling="true"
		app:drawableStartSize="@dimen/_36sdp"
		app:drawableEndPadding="@dimen/_1sdp"

		app:layout_constraintBottom_toTopOf="@id/play_button"
		app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
		app:layout_constraintStart_toStartOf="parent" />

	<ImageButton
		android:id="@+id/edit_profile_button"
		android:layout_width="@dimen/_52sdp"
		android:layout_height="@dimen/_52sdp"
		android:background="?android:attr/selectableItemBackground"
		android:contentDescription="@string/main_menu_edit_profile"

		android:src="@drawable/ic_edit_profile"
		app:tint="@color/primary_text"
		app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/mc_version_spinner" />

	<com.kdt.mcgui.MineButton
		android:id="@+id/play_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_62sdp"

		android:layout_marginHorizontal="@dimen/_17sdp"
		android:layout_marginBottom="@dimen/_15sdp"

		android:textAllCaps="true"
		android:text="@string/main_play"
		app:layout_constraintBottom_toBottomOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>
